# crypto_news_aggregator

./: .env  Cargo.toml  README.md  Readme.md
src/: main.rs
static/: styles.css
templates/: index.html
